httpc: Add initial supervisor tree
Change-Id: Id1c2c5ba9deab31d44d9ceedafa179972544c637

--- a/lib/httpc/src/Makefile
+++ b/lib/httpc/src/Makefile
@@ -43,7 +43,11 @@ BEHAVIOUR_MODULES=
 MODULES= \
 	httpc \
 	httpc_app \
-	httpc_sup
+	httpc_manager \
+	httpc_session_sup \
+	httpc_sup \
+	httpc_worker \
+	httpc_worker_sup
 
 INTERNAL_HRL_FILES = 
 
