httpc: Rename modules (worker -> handler)
Change-Id: I907ab190b93333432cb8a8f6088c82050b2589d4

--- a/lib/httpc/src/Makefile
+++ b/lib/httpc/src/Makefile
@@ -46,8 +46,8 @@ MODULES= \
 	httpc_manager \
 	httpc_session_sup \
 	httpc_sup \
-	httpc_worker \
-	httpc_worker_sup
+	httpc_request_handler \
+	httpc_handler_sup
 
 INTERNAL_HRL_FILES = 
 
