httpc: Add initial session handling
Change-Id: I93c049143fb84f37edebb2b2a0578e95c85c61df

--- a/lib/httpc/src/Makefile
+++ b/lib/httpc/src/Makefile
@@ -44,6 +44,7 @@ MODULES= \
 	httpc \
 	httpc_app \
 	httpc_manager \
+	httpc_options \
 	httpc_session_sup \
 	httpc_sup \
 	httpc_request_handler \
