httpc: Rename httpc_request_handler to httpc_handler
Change-Id: I5762dcac6d40cb96fe43e44b75d55027bc364fdb

--- a/lib/httpc/src/Makefile
+++ b/lib/httpc/src/Makefile
@@ -43,12 +43,13 @@ BEHAVIOUR_MODULES=
 MODULES= \
 	httpc \
 	httpc_app \
+	httpc_handler \
+	httpc_handler_sup \
 	httpc_manager \
 	httpc_options \
 	httpc_session_sup \
-	httpc_sup \
-	httpc_request_handler \
-	httpc_handler_sup
+	httpc_sup
+
 
 INTERNAL_HRL_FILES = 
 
