httpc: Work in progress...
Change-Id: I22c04840c824ff6d21eb7ec0f5fec1a122bafe90

--- a/lib/httpc/src/Makefile
+++ b/lib/httpc/src/Makefile
@@ -48,7 +48,8 @@ MODULES= \
 	httpc_manager \
 	httpc_options \
 	httpc_session_sup \
-	httpc_sup
+	httpc_sup \
+	httpc_transport
 
 
 INTERNAL_HRL_FILES = 
